# instant-insanity

./: .gitignore  CLAUDE.md  CODEOWNERS  LICENSE  README.md  TODO.md  create_manim_compatible_image.py  get_alpha_info.py  instant-insanity.bib  mypy.ini  pyproject.toml  transparent_image_mobject.py
bug-reports/manim 4336 - line3d-cairo-bug/: line3d.py
bug-reports/manim 4337 - lined3d-fadein-bug/: line3d_fadein-bug.py
docs/: background.md  prior-art.md  pycharm-manim-package-shadowing.md  uml.md  youtube.md
docs/LaTeXfiles/: basicpyLaTeX.py
docs/citations/: instant-insanity.bib
docs/meeting notes/: 2025-01-09 instant insanity meeting.md  2025-01-09 instant insanity meeting.txt  2025-02-13 instant insanity meeting.md
docs/texttospeech/: thisisacollaboration_forttsmaker.txt
docs/uml/: animate_method_sequence_diagram.md  animators.md  labelled-edge.md  manim-mobjects.md  value_tracker_updater_sequence_diagram.md
notebooks/: 2025-09-03 Projection Comparisons.html  3D-Point.ipynb  Animation Examples.ipynb  Animation-Examples.ipynb  Epilogue-Voiceovers.ipynb  First Steps with Manim.ipynb  Graph-Theory-Voiceovers.ipynb  History-Voiceovers.ipynb  Introduction-Voiceovers.ipynb  Manim 3D Examples.ipynb  Matplotlib 3D Animation.ipynb  Matplotlib-3D-Animation.ipynb  Projection Comparisons.ipynb  Projection Theory.ipynb  Projections.ipynb  Solution Combinatorics - V2.ipynb  Solution Combinatorics.ipynb  Solution-Combinatorics-V2.ipynb  Solution-Combinatorics-Voiceovers.ipynb  Solution-Combinatorics.ipynb  Storyboard.ipynb  numpy examples.ipynb  numpy-examples.ipynb
notebooks/archive/: Solution-Combinatorics.ipynb
notebooks/design/: animation_framework.ipynb
notebooks/images/: ross-honsberger.avif
notebooks/voiceovers/: Makefile  speak.zsh
notes/: google-tts-arthur.md
src/claude/: cube_faces_animation.py  main.py  manim.cfg  orient_2_factor_graph.py  orient_2_factor_labelled_multigraph.py  orient_2_factor_multigraph.py
src/instant_insanity/: cube.py  (+6 more)
(+340 files in other folders)
